Bug 594435: Bookmark properties topic improvements

If a bookmark has "foo" and "bar" topics, show "foo, bar, "
instead of "fo, bar, o".

While at it, remove the trailing comma, so we display "foo, bar"
rather than "foo, bar, ".

http://bugzilla.gnome.org/show_bug.cgi?id=594435

Signed-off-by: Xan Lopez <xan@gnome.org>